[encoding] Cleanup encoding and stop using deprecated string utils methods